# proxypdf

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
proxypdf/: streamwriter.py  write.py
